[package]
name = "monostate"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "rust-patterns", "no-std"]
description = "Type that deserializes only from one specific value"
documentation = "https://docs.rs/monostate"
edition = "2021"
keywords = ["serde", "serialization"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/monostate"
rust-version = "1.56"

[dependencies]
monostate-impl = { version = "=0.1.1", path = "impl" }
serde = { version = "1.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
