[package]
name = "monostate"
version = "0.1.13"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "rust-patterns", "no-std", "no-std::no-alloc"]
description = "Type that deserializes only from one specific value"
documentation = "https://docs.rs/monostate"
edition = "2021"
keywords = ["serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/monostate"
rust-version = "1.60"

[dependencies]
monostate-impl = { version = "=0.1.13", path = "impl" }
serde = { version = "1.0.166", default-features = false }

[dev-dependencies]
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[workspace]
