[package]
name = "monostate-impl"
version = "0.1.9"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Implementation detail of the monostate crate"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/monostate"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", default-features = false, features = ["parsing", "proc-macro"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
